--- a/index.css
+++ b/index.css
@@ -13,7 +13,6 @@
 html {
     box-sizing: border-box;
     scroll-behavior: smooth;
-    overflow-x: hidden;
 }
 
 *,
@@ -145,9 +144,11 @@ h4 {
 
 /* section animated colored separations */
 .border {
+    position: relative;
     padding: 2rem;
     border-top: 7px solid;
     animation: colorWash 3s infinite;
+    z-index: 2;
 }
 
 @keyframes colorWash {
@@ -261,8 +262,8 @@ h4 {
 
 /* SECTION 3 - PROJECTS */
 .bg4 {
-    background-image: url("./Images/carbon_fibre.webp");
-    padding: 4em 0em;
+/*  background-image: url("./Images/carbon_fibre.webp"); */
+    padding: 2em;
     font-family: "Oxygen", sans-serif;
     font-style: normal;
     color: var(--font-neutral);
@@ -288,8 +289,9 @@ h4 {
     flex-direction: column;
     align-items: flex-end;
     text-align: right;
-    margin: 2em 4em;
-    position: relative;
+    margin: 4em;
+    position: absolute;
+    right: 0;
 }
 
 .projects-subtitle {
@@ -309,20 +311,19 @@ h4 {
 }
 
 .prj1-img {
-    position: absolute;
-    top: 50px;
-    left: 0;
-    margin: 0 2em;
+    position: relative;
+    margin: 5em 2em 0 2em;
     box-shadow: 0 0.75rem 1.25rem rgba(0, 0, 0, 0.6);
+    z-index: 1;
 }
 
 .prj1-vid {
     display: block;
-    margin: 0 auto;
-    margin-top: 35%;
+    margin: 12em auto 0 auto;
     box-shadow: 0 0.75rem 1.25rem rgba(0, 0, 0, 0.6);
     border-radius: 0.5em;
     cursor: pointer;
+    z-index: 1;
 }
 
 /* SECTION B - PROJECT 2 */
@@ -336,7 +337,7 @@ h4 {
     padding: 6em 0;
     border-top: 2px solid transparent;
     border-bottom: 2px solid transparent;
-    border-image: linear-gradient(0.25turn, rgba(255,249,34), rgba(255,0,128), rgba(56,2,155,0));
+ /* border-image: linear-gradient(0.25turn, rgba(255,249,34), rgba(255,0,128), rgba(56,2,155,0));*/
     border-image-slice: 1;
 }
 
@@ -444,38 +445,290 @@ h4 {
 
 .prj3-img {
     position: absolute;
-    top: 50px;
     left: 65%;
-    margin: 0 2em;
+    margin: 2em;
     box-shadow: 0 0.75rem 1.25rem rgba(0, 0, 0, 0.6);
-    max-width: 600px;
-    max-height: 1200px;
+    max-width: 500px;
+    max-height: 1100px;
+    z-index: 1;
 }
 
 .prj3-vid {
     display: block;
-    margin: 0 auto;
-    margin-top: 60%;
+    margin: 0 auto 8em auto;
+    margin-top: 50%;
     box-shadow: 0 0.75rem 1.25rem rgba(0, 0, 0, 0.6);
     border-radius: 0.5em;
+    z-index: 1;
+}
+
+/* LIGHT ANIMATION FOR PROJECTS SECTION */
+.special {
+    position: relative;
+    margin: 0;
+    background: radial-gradient(#a23982,#1f1013);
+    overflow-y: hidden;
+    overflow-x: hidden;
+    -webkit-animation: fadeIn 1 1s ease-out;
+    -moz-animation: fadeIn 1 1s ease-out;
+    -o-animation: fadeIn 1 1s ease-out;
+    animation: fadeIn 1 1s ease-out;
+}
+
+.light {
+    position: absolute;
+    width: 0px;
+    opacity: .75;
+    background-color: black;
+    box-shadow: #000000 0px 0px 20px 2px;
+    opacity: 0;
+    top: 100vh;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    margin: auto;
+    Z-index: 0;
+}
+
+.x1{
+  -webkit-animation: floatUp 4s infinite linear;
+  -moz-animation: floatUp 4s infinite linear;
+  -o-animation: floatUp 4s infinite linear;
+  animation: floatUp 4s infinite linear;
+   -webkit-transform: scale(1.0);
+   -moz-transform: scale(1.0);
+   -o-transform: scale(1.0);
+  transform: scale(1.0);
+}
+
+.x2{
+  -webkit-animation: floatUp 7s infinite linear;
+  -moz-animation: floatUp 7s infinite linear;
+  -o-animation: floatUp 7s infinite linear;
+  animation: floatUp 7s infinite linear;
+  -webkit-transform: scale(1.6);
+  -moz-transform: scale(1.6);
+  -o-transform: scale(1.6);
+  transform: scale(1.6);
+  left: 15%;
+}
+
+.x3{
+  -webkit-animation: floatUp 2.5s infinite linear;
+  -moz-animation: floatUp 2.5s infinite linear;
+  -o-animation: floatUp 2.5s infinite linear;
+  animation: floatUp 2.5s infinite linear;
+  -webkit-transform: scale(.5);
+  -moz-transform: scale(.5);
+  -o-transform: scale(.5);
+  transform: scale(.5);
+  left: -15%;
+}
+
+.x4{
+  -webkit-animation: floatUp 4.5s infinite linear;
+  -moz-animation: floatUp 4.5s infinite linear;
+  -o-animation: floatUp 4.5s infinite linear;
+  animation: floatUp 4.5s infinite linear;
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -o-transform: scale(1.2);
+  transform: scale(1.2);
+  left: -34%;
+}
+
+.x5{
+  -webkit-animation: floatUp 8s infinite linear;
+  -moz-animation: floatUp 8s infinite linear;
+  -o-animation: floatUp 8s infinite linear;
+  animation: floatUp 8s infinite linear;
+  -webkit-transform: scale(2.2);
+  -moz-transform: scale(2.2);
+  -o-transform: scale(2.2);
+  transform: scale(2.2);
+  left: -57%;
+}
+
+.x6{
+  -webkit-animation: floatUp 3s infinite linear;
+  -moz-animation: floatUp 3s infinite linear;
+  -o-animation: floatUp 3s infinite linear;
+  animation: floatUp 3s infinite linear;
+  -webkit-transform: scale(.8);
+  -moz-transform: scale(.8);
+  -o-transform: scale(.8);
+  transform: scale(.8);
+  left: -81%;
+}
+
+.x7{
+  -webkit-animation: floatUp 5.3s infinite linear;
+  -moz-animation: floatUp 5.3s infinite linear;
+  -o-animation: floatUp 5.3s infinite linear;
+  animation: floatUp 5.3s infinite linear;
+  -webkit-transform: scale(3.2);
+  -moz-transform: scale(3.2);
+  -o-transform: scale(3.2);
+  transform: scale(3.2);
+  left: 37%;
+}
+
+.x8{
+  -webkit-animation: floatUp 4.7s infinite linear;
+  -moz-animation: floatUp 4.7s infinite linear;
+  -o-animation: floatUp 4.7s infinite linear;
+  animation: floatUp 4.7s infinite linear;
+  -webkit-transform: scale(1.7);
+  -moz-transform: scale(1.7);
+  -o-transform: scale(1.7);
+  transform: scale(1.7);
+  left: 62%;
+}
+
+.x9{
+  -webkit-animation: floatUp 4.1s infinite linear;
+  -moz-animation: floatUp 4.1s infinite linear;
+  -o-animation: floatUp 4.1s infinite linear;
+  animation: floatUp 4.1s infinite linear;
+  -webkit-transform: scale(0.9);
+  -moz-transform: scale(0.9);
+  -o-transform: scale(0.9);
+  transform: scale(0.9);
+  left: 85%;
+}
+
+@-webkit-keyframes floatUp{
+  0%{top: 100vh; opacity: 0;}
+  25%{opacity: 1;}
+  50%{top: 0vh; opacity: .8;}
+  75%{opacity: 1;}
+  100%{top: -100vh; opacity: 0;}
+}
+@-moz-keyframes floatUp{
+  0%{top: 100vh; opacity: 0;}
+  25%{opacity: 1;}
+  50%{top: 0vh; opacity: .8;}
+  75%{opacity: 1;}
+  100%{top: -100vh; opacity: 0;}
+}
+@-o-keyframes floatUp{
+  0%{top: 100vh; opacity: 0;}
+  25%{opacity: 1;}
+  50%{top: 0vh; opacity: .8;}
+  75%{opacity: 1;}
+  100%{top: -100vh; opacity: 0;}
+}
+@keyframes floatUp{
+  0%{top: 100vh; opacity: 0;}
+  25%{opacity: 1;}
+  50%{top: 0vh; opacity: .8;}
+  75%{opacity: 1;}
+  100%{top: -100vh; opacity: 0;}
+}
+
+@-webkit-keyframes fadeIn{
+  from{opacity: 0;}
+  to{opacity: 1;}
+}
+
+@-moz-keyframes fadeIn{
+  from{opacity: 0;}
+  to{opacity: 1;}
+}
+
+@-o-keyframes fadeIn{
+  from{opacity: 0;}
+  to{opacity: 1;}
+}
+
+@keyframes fadeIn{
+  from{opacity: 0;}
+  to{opacity: 1;}
+}
+
+@-webkit-keyframes fadeOut{
+  0%{opacity: 0;}
+  30%{opacity: 1;}
+  80%{opacity: .9;}
+  100%{opacity: 0;}
+}
+
+@-moz-keyframes fadeOut{
+  0%{opacity: 0;}
+  30%{opacity: 1;}
+  80%{opacity: .9;}
+  100%{opacity: 0;}
+}
+
+@-o-keyframes fadeOut{
+  0%{opacity: 0;}
+  30%{opacity: 1;}
+  80%{opacity: .9;}
+  100%{opacity: 0;}
+}
+
+@keyframes fadeOut{
+  0%{opacity: 0;}
+  30%{opacity: 1;}
+  80%{opacity: .9;}
+  100%{opacity: 0;}
+}
+
+@-webkit-keyframes finalFade{
+  0%{opacity: 0;}
+  30%{opacity: 1;}
+  80%{opacity: .9;}
+  100%{opacity: 1;}
+}
+
+@-moz-keyframes finalFade{
+  0%{opacity: 0;}
+  30%{opacity: 1;}
+  80%{opacity: .9;}
+  100%{opacity: 1;}
+}
+
+@-o-keyframes finalFade{
+  0%{opacity: 0;}
+  30%{opacity: 1;}
+  80%{opacity: .9;}
+  100%{opacity: 1;}
+}
+
+@keyframes finalFade{
+  0%{opacity: 0;}
+  30%{opacity: 1;}
+  80%{opacity: .9;}
+  100%{opacity: 1;}
 }
 
 
 /* SECTION 4 - CONTACT */
 .bg2 {
-    background-image: url("./Images/BeamBg.png");
     padding: 4em 0em;
     font-family: "Oxygen", sans-serif;
     font-weight: 600;
     font-style: normal;
     color: var(--font-neutral);
     text-align: center;
+    overflow-y: hidden;
+    overflow-x: hidden;
+}
+
+#myVideo {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -1;
 }
 
 .contact-text {
     width: 400px;
     margin: 1em auto;
 }
+
 
 /* SECTION 5 - FOOTER */
 .bg3 {
@@ -502,7 +755,7 @@ h4 {
 }
 
 
-/* SECTION 5 - RESPONSIVE */
+/* SECTION 6 - RESPONSIVE */
 @media(max-width: 1040px){
     .nav {
         flex-wrap: wrap;
@@ -541,6 +794,7 @@ h4 {
     }
 
     .flex-container {
+        position: relative;
         margin: 2em 1em;
         text-align: justify;
     }
